# Vacancy

./: README.md  pyproject.toml
src/: api.py  base_class.py  convert_user_vacancy.py  main.py  user_vacancies.json  vacancies.json  vacancy.py
tests/: test_api.py  test_convert_user_vacancy.py  test_vacancy.py  user_vacancies.json  vacancies.json
