[tool.poetry]
name = "tests"
version = "0.1.0"
description = ""
authors = ["SilverAnton <cu4hawk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
pytest = "^8.1.1"
pytest-coverage = "^0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
